[package]
name = "pact_elixir_bindings"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "pact_elixir_bindings"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.22.0"
pact_ffi = { path = "/Users/andrewjensen/Documents/code/podium/andrew-jensen/pact-reference/rust/pact_ffi" }
libc = "0.2.99"
